JumpScript/tests/baselines/reference/aliasWithInterfaceExportAssignmentUsedInVarInitializer.errors.txt
tests/cases/compiler/aliasWithInterfaceExportAssignmentUsedInVarInitializer_1.jump(2,9): error TS2304: Cannot find name 'b'.


==== tests/cases/compiler/aliasWithInterfaceExportAssignmentUsedInVarInitializer_1.jump (1 errors) ====
    import moduleA = require("./aliasWithInterfaceExportAssignmentUsedInVarInitializer_0");
    var d = b.q3;
            ~
!!! error TS2304: Cannot find name 'b'.
==== tests/cases/compiler/aliasWithInterfaceExportAssignmentUsedInVarInitializer_0.jump (0 errors) ====
    interface c {
        q3: number;
    }
    export = c;
    